--- a/WebMain.html
+++ b/WebMain.html
@@ -50,7 +50,7 @@
         var geocoder = new kakao.maps.services.Geocoder();
         var markers = [];
         var map;
-        var parkingMarkerImage = 'Images/Parking.png';
+        var parkingMarkerImage = 'Images/parking.png';
 
         function clearMarkers() {
             markers.forEach(marker => marker.setMap(null));
