마커 지우기 삭제 및 주차장 버튼 토글 형식으로 변경

--- a/WebMain.html
+++ b/WebMain.html
@@ -14,8 +14,8 @@
     <script src="JavaScript/Parking.js" defer></script>
     <script src="JavaScript/TopButtons.js" defer></script>
     <script src="JavaScript/ParkingInfo.js" defer></script>
-    <script src="JavaScript/CurrentLoc.js"defer ></script>
-    <script src="JavaScript/BBInfo.js"defer ></script>
+    <script src="JavaScript/CurrentLoc.js" defer></script>
+    <script src="JavaScript/BBInfo.js" defer></script>
 
     <title>부산시 주정차 금지구역 및 공영 주차장 위치 표시</title>
 </head>
@@ -27,9 +27,8 @@
 
     <div id="btnContainer" class="btn-container hidden">
         <div class="btn-group">
-            <button id="illegalBtn" class="hidden-btn">주정차 금지구역</button>
+            <button id="illegalBtn" class="hidden-btn" disabled>주정차 금지구역</button>
             <button id="parkingBtn" class="hidden-btn">공영 주차장 위치</button>
-            <button id="clearBtn" class="hidden-btn" disabled>마커 지우기</button>
         </div>
     </div>
 
