--- a/WebMain.html
+++ b/WebMain.html
@@ -17,14 +17,13 @@
     <script src="JavaScript/CurrentLoc.js" defer></script>
     <script src="JavaScript/BBInfo.js" defer></script>
     <script src="JavaScript/polyline.js" defer></script>
-    <script src="JavaScript/BottomSheet.js" defer></script>
 
-    <title>CLPK(Clean Parking) for Busan</title>
+    <title>부산시 주정차 금지구역 및 공영 주차장 위치 표시</title>
 </head>
 
 <body>
     <div class="title-container">
-        <h1>CLPK(Clean Parking)</h1>
+        <h1>부산시 주정차 금지구역 및 공영 주차장 위치 표시</h1>
     </div>
 
     <div id="btnContainer" class="btn-container hidden">
@@ -36,6 +35,7 @@
 
     <div class="map-container">
         <div id="map"></div>
+        
     </div>
 
     <script type="text/javascript"
