주차 요금 정보 추가

--- a/WebMain.html
+++ b/WebMain.html
@@ -18,6 +18,7 @@
     <script src="JavaScript/CurrentLoc.js" defer></script>
     <script src="JavaScript/BBInfo.js" defer></script>
     <script src="JavaScript/polyline.js" defer></script>
+    <script src="JavaScript/ParkingMarker.js" defer></script>
 
     <title>CLPK(Clean Parking)</title>
 </head>
