--- a/WebMain.html
+++ b/WebMain.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="CSS/Buttons.css">
     <link rel="stylesheet" type="text/css" href="CSS/BeArranged.css">
     <link rel="stylesheet" type="text/css" href="CSS/Boxes.css">
+    <link rel="stylesheet" type="text/css" href="CSS/ParkingInfo.css">
+    <link rel="stylesheet" type="text/css" href="CSS/BottomSheet.css">
+    <link rel="stylesheet" type="text/css" href="CSS/mobile.css">
 
     <script src="JavaScript/Parking.js" defer></script>
     <script src="JavaScript/TopButtons.js" defer></script>
@@ -17,25 +20,26 @@
     <script src="JavaScript/CurrentLoc.js" defer></script>
     <script src="JavaScript/BBInfo.js" defer></script>
     <script src="JavaScript/polyline.js" defer></script>
+    <script src="JavaScript/ParkingMarker.js" defer></script>
+    <script src="JavaScript/BottomSheet.js" defer></script>
 
-    <title>부산시 주정차 금지구역 및 공영 주차장 위치 표시</title>
+    <title>CLPK(Clean Parking)</title>
 </head>
 
 <body>
     <div class="title-container">
-        <h1>부산시 주정차 금지구역 및 공영 주차장 위치 표시</h1>
+        <h1>CLPK(Clean Parking)</h1>
     </div>
 
     <div id="btnContainer" class="btn-container hidden">
         <div class="btn-group">
             <button id="illegalBtn" class="hidden-btn" disabled>주정차 금지구역</button>
-            <button id="parkingBtn" class="hidden-btn">공영 주차장 위치</button>
+            <button id="parkingBtn" class="hidden-btn">주차장 위치</button>
         </div>
     </div>
 
     <div class="map-container">
         <div id="map"></div>
-        
     </div>
 
     <script type="text/javascript"
@@ -46,6 +50,7 @@
         var geocoder = new kakao.maps.services.Geocoder();
         var markers = [];
         var map;
+        var parkingData = [];
         var parkingMarkerImage = 'Images/parking.png';
 
         function clearMarkers() {
@@ -53,7 +58,7 @@
             markers = [];
         }
     </script>
-    <div class="boxContainer">
+    <div class="bottom-sheet" id="bottomSheet">
         <div class="box box1"></div>
         <div class="box box2"></div>
     </div>
