주정차 단속 구간 토글 형식으로 변경

--- a/WebMain.html
+++ b/WebMain.html
@@ -31,7 +31,7 @@
 
     <div id="btnContainer" class="btn-container hidden">
         <div class="btn-group">
-            <button id="illegalBtn" class="hidden-btn" disabled>주정차 금지구역</button>
+            <button id="illegalBtn" class="hidden-btn">주정차 금지구역</button>
             <button id="parkingBtn" class="hidden-btn">주차장 위치</button>
         </div>
     </div>
