--- a/WebMain.html
+++ b/WebMain.html
@@ -57,8 +57,8 @@
         }
     </script>
     <div class="bottom-sheet" id="bottomSheet">
-        <div class="box box1" id="bottomSheetUp"></div>
-        <div class="box box2" id="bottomSheetDown"></div>
+        <div class="box box1"></div>
+        <div class="box box2"></div>
     </div>
 </body>
 
