--- a/manual/manualHTML.html
+++ b/manual/manualHTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메뉴얼 팝업</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="manualCSS.css">
 </head>
 <body>
     <button onclick="showPopup(0)">사용 메뉴얼</button>
@@ -61,6 +61,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="manualJS.js"></script>
 </body>
 </html>
