글씨체 변경

--- a/WebMain.html
+++ b/WebMain.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" type="text/css" href="CSS/BeArranged.css">
     <link rel="stylesheet" type="text/css" href="CSS/Boxes.css">
     <link rel="stylesheet" type="text/css" href="CSS/ParkingInfo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <style>
+        *{
+        font-family: "Jua", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        }
+    </style>
 
     <script src="JavaScript/Parking.js" defer></script>
     <script src="JavaScript/TopButtons.js" defer></script>
@@ -41,7 +51,7 @@
     </div>
 
     <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=ab20dd7e58d76f56e7c1af0c3c89152b&libraries=services,clusterer,drawing"></script>
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2d1c2eac9c9a742727b5d20732316fc1&libraries=services,clusterer,drawing"></script>
     <script>
         const illegalUrl = 'https://apis.data.go.kr/6260000/BusanIlglWkstInfoService/getIlglWkstInfo?serviceKey=%2B9h%2BiNdRBhISq%2BfkcRcEXacYgP9rBOreEaMlS6GulIOg18rVyFYyqnJa4l8yBvHsHn860gZpbboSHpRtR5IFfw%3D%3D&numOfRows=500&pageNo=4&resultType=json';
 
