바텀 시트 기능 수정

--- a/WebMain.html
+++ b/WebMain.html
@@ -15,10 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <style>
-        *{
-        font-family: "Jua", sans-serif;
-        font-weight: 400;
-        font-style: normal;
+        * {
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
     </style>
 
@@ -67,7 +67,16 @@
         }
     </script>
     <div class="bottom-sheet" id="bottomSheet">
-        <div class="box box1" id="bottomSheetUp"></div>
+        <div class="box box1">
+            <div class="inner-upbox">
+                <div class="subtitle-box">주차장 정보</div>
+                <div class="inner-scroll" id="bottomSheetUp"></div>
+                <select class="filter">
+                    <option value="1" selected>거리순</option>
+                    <option value="2">요금순</option>
+                </select>
+            </div>
+        </div>
         <div class="box box2" id="bottomSheetDown"></div>
     </div>
 </body>
