--- a/manual/manualHTML.html
+++ b/manual/manualHTML.html
@@ -14,7 +14,7 @@
     <div id="popup0" class="popup">
         <div class="popup-header">1. 지도</div>
         <div class="popup-body">
-            <img src="image1.jpg" alt="첫 번째 도움말 이미지">
+            <img src="image1.jpg" alt="첫 번째 도움말 이미지"></img>
             <p>지도입니다. 가장 기본적인 길찾기 수단입니다.</p>
         </div>
         <div class="popup-buttons">
@@ -26,7 +26,7 @@
     <div id="popup1" class="popup">
         <div class="popup-header">2. 주정차금지 구역과 주차장 위치</div>
         <div class="popup-body">
-            <img src="image2.jpg" alt="두 번째 도움말 이미지">
+            <img src="image2.jpg" alt="두 번째 도움말 이미지"></img>
             <p>주정차금지 구역 탭과 주차장 위치 탭입니다.</p>
         </div>
         <div class="popup-buttons">
@@ -39,7 +39,7 @@
     <div id="popup2" class="popup">
         <div class="popup-header">3. 인근 주차장 정보 맞춤 필터링</div>
         <div class="popup-body">
-            <img src="image3.jpg" alt="세 번째 도움말 이미지">
+            <img src="image3.jpg" alt="세 번째 도움말 이미지"></img>
             <p>인근 주차장 정보를 맞춤으로 필터링합니다.</p>
         </div>
         <div class="popup-buttons">
@@ -52,7 +52,7 @@
     <div id="popup3" class="popup">
         <div class="popup-header">4. 주차장 세부 정보</div>
         <div class="popup-body">
-            <img src="image4.jpg" alt="네 번째 도움말 이미지">
+            <img src="image4.jpg" alt="네 번째 도움말 이미지"></img>
             <p>주차장 세부 정보입니다.</p>
         </div>
         <div class="popup-buttons">
