--- a/WebMain.html
+++ b/WebMain.html
@@ -48,6 +48,12 @@
 
     <div class="map-container">
         <div id="map"></div>
+        <button id="currentLocationBtn"></button>
+        <!-- 지도 확대, 축소 컨트롤 div 입니다 -->
+    <div class="custom_zoomcontrol radius_border"> 
+        <span onclick="zoomIn()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_plus.png" alt="확대"></span>  
+        <span onclick="zoomOut()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_minus.png" alt="축소"></span>
+    </div>
     </div>
 
     <script type="text/javascript"
