--- a/WebMain.html
+++ b/WebMain.html
@@ -66,6 +66,10 @@
         <div class="popup-body">
             <img src="image1.jpg" alt="첫 번째 도움말 이미지">
             <p>지도입니다. 가장 기본적인 길찾기 수단입니다.</p>
+            <p>1. 위치 정보를 사용합니다. (모바일 설정>위치>위치 사용)</p>
+            <p>2. 과녁 형상의 버튼을 누르면 현재위치를 중심으로 지도가 표시됩니다.</p>
+            <p>3. '+'와 '-' 형상의 버튼을 누르면 지도를 확대, 축소합니다.</p>
+            <p>4. 스크롤을 이용해 확대, 축소할 수 있습니다.</p>
         </div>
         <div class="popup-buttons">
             <button onclick="closePopup()">닫기</button>
@@ -78,6 +82,11 @@
         <div class="popup-body">
             <img src="image2.jpg" alt="두 번째 도움말 이미지">
             <p>주정차금지 구역 탭과 주차장 위치 탭입니다.</p>
+            <p>1. 주정차금지 구역 탭을 누르면 주정차금지 구역이 지도에 표시됩니다.</p>
+            <p>2. 주차장 위치 탭을 누르면 현재 위치를 중심으로 사용 가능한 주차장이 지도에 표시됩니다.</p>
+            <p>3. 탭을 한 번 더 누르면 마커를 지웁니다.</p>
+            <p>4. 탭을 모두 눌러 주정차금지 구역과 주차장 위치 모두 지도에 표시가 가능합니다.</p>
+            <p>5. 마커를 누르면 주차장의 이름과 간략한 정보가 나옵니다.</p>
         </div>
         <div class="popup-buttons">
             <button onclick="prevPopup(0)">이전</button>
@@ -91,6 +100,10 @@
         <div class="popup-body">
             <img src="image3.jpg" alt="세 번째 도움말 이미지">
             <p>인근 주차장 정보를 맞춤으로 필터링합니다.</p>
+            <p>1. 주차장 위치 탭을 누릅니다.</p>
+            <p>2. 지도 아래에 있는 툴박스에 주차장에 대한 세부 정보가 표시됩니다.</p>
+            <p>3. 거리순으로 나열하면 현재 위치에서 가장 가까운 순으로 주차장의 정보가 정리됩니다.</p>
+            <p>4. 요금순으로 나열하면 주차장의 기본 요금이 낮은 순으로 주차장의 정보가 정리됩니다.</p>
         </div>
         <div class="popup-buttons">
             <button onclick="prevPopup(1)">이전</button>
@@ -104,6 +117,11 @@
         <div class="popup-body">
             <img src="image4.jpg" alt="네 번째 도움말 이미지">
             <p>주차장 세부 정보입니다.</p>
+            <p>1. 주정차금지 구역 탭을 누릅니다.</p>
+            <p>2. 주정차금지 구역에 대한 상세 정보가 나옵니다.</p>
+            <p>3. 주차장 위치 탭을 누릅니다.</p>
+            <p>4. 공영 주차장에 대한 상세 정보가 나옵니다.</p>
+            <p>5. 길찾기 버튼을 누르면 카카오 내비게이션 사이트로 이동합니다.</p>
         </div>
         <div class="popup-buttons">
             <button onclick="prevPopup(2)">이전</button>
