--- a/WebMain.html
+++ b/WebMain.html
@@ -57,28 +57,6 @@
     </div>
 
 
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.0/kakao.min.js"
-    integrity="sha384-l+xbElFSnPZ2rOaPrU//2FF5B4LB8FiX5q4fXYTlfcG4PGpMkE1vcL7kNXI6Cci0" crossorigin="anonymous"></script>
-  <script>
-    Kakao.init('2d1c2eac9c9a742727b5d20732316fc1'); // 사용하려는 앱의 JavaScript 키 입력
-  </script>
-  
-  <!--<a id="start-navigation" href="javascript:startNavigation()">
-    <img src="https://developers.kakao.com/assets/img/about/buttons/navi/kakaonavi_btn_medium.png"
-      alt="길 안내하기 버튼" />
-  </a>
-  
-  <script>
-    function startNavigation(name, x, y) {
-        Kakao.Navi.start({
-            name: name,
-            x: x,
-            y: y,
-            coordType: 'wgs84',
-        });
-    }
-</script>-->
-
     <!-- 팝업 메뉴얼 시작 -->
     
 
@@ -207,7 +185,7 @@
             <div class="inner-upbox">
                 <div class="subtitle-box">주차장 정보</div>
                 <div class="inner-scroll" id="bottomSheetUp"></div>
-                <select class="filter" id="filter">
+                <select class="filter" >
                     <option value="1" selected>거리순</option>
                     <option value="2">요금순</option>
                 </select>
