--- a/WebMain.html
+++ b/WebMain.html
@@ -122,7 +122,7 @@
             <p>2. 주정차금지 구역에 대한 상세 정보가 나옵니다.</p>
             <p>3. 주차장 위치 탭을 누릅니다.</p>
             <p>4. 주차장에 대한 상세 정보가 나옵니다.</p>
-            <p>5. 길찾기 버튼을 누르면 카카오내비 사이트로 이동합니다.</p>
+            <p>5. 길찾기 버튼을 누르면 카카오맵 사이트로 이동합니다.</p>
         </div>
         <div class="popup-buttons">
             <button id="before"onclick="prevPopup(2)">이전</button>
