--- a/WebMain.html
+++ b/WebMain.html
@@ -186,8 +186,8 @@
             <div class="inner-upbox">
                 <div class="subtitle-box">주차장 정보</div>
                 <div class="inner-scroll" id="bottomSheetUp"></div>
-                <select class="filter" >
-                    <option value="1" selected>거리순</option>
+                <select id="filterbox" class="filter" onchange="howtosort();">
+                    <option value="1">거리순</option>
                     <option value="2">요금순</option>
                 </select>
             </div>
